<resources>
    <string name="app_name">EasyCook</string>
    <string name="facebook_application_id" translatable="false">easy-cook</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbeasy-cook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="food_joke_fragment">Joke</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="no_favorite_recipes">No Favorite Recipes.</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="share_recipe">Share Recipe</string>
    <string name="g">g</string>
    <string name="slash">/</string>
    <string name="cart">Cart</string>
    <string name="total_price">Total Price:</string>
    <string name="order">Order</string>
    <string name="no_products">No Products</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="to_cart">To Cart</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="confirm">Confirm</string>
    <string name="no_orders">No Orders</string>
    <string name="orders">Orders</string>
    <string name="contact_name">Contact Name:</string>
    <string name="contact_phone">Contact Phone:</string>
    <string name="delivery_address">Delivery Address:</string>
</resources>